# lion-reader

./: .dockerignore  .env.example  .env.test  .envrc  .gitattributes  .gitignore  .pnpm-build-allow.json  .prettierignore  ANDROID-TODO.md  CLAUDE.md  DEBUGGING_ZUSTAND.md  Dockerfile  README.md  SECURITY.md  TODO.md  ZUSTAND_DELTA_CHECKLIST.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  fly.toml  image-types.d.ts  instrumentation.ts  knip.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  query-normalization-TODO.md  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
.claude/: settings.json
.github/: dependabot.yml
.husky/: pre-commit
android/: .editorconfig  .envrc  .gitignore  CLAUDE.md  README.md  build.gradle.kts  gradlew  settings.gradle.kts
bench/: .gitignore  README.md  anon-pages.ts  characterize-prod.sql  config.ts  loadtest.ts  prod-params.example.json  seed-bench.ts
benchmarks/: dashboard.html  run.ts  seed.ts
blog/: CNAME  _config.yml  changelog.md  index.md
discord-bot/: .env.example  README.md  package.json
docs/: DEPLOYMENT.md  DESIGN.md  MVP.md  PHASE2-4-PLAN.md  RUNBOOK.md  android-app-design.md  api-consolidation-plan.md  better-voices-design.md  email-subscriptions-design.md  fly-postgres-ops.md  narration-design.md  narration-highlighting-design.md  plugin-system-design.md  postgres-ops.md  privacy-TODO.md  profiling-results-2026-02-25.md  query-normalization-plan.md  saved-articles-consolidation.md  zustand-delta-architecture.md
drizzle/: 0000_sweet_the_watchers.sql  0001_sweet_moon_knight.sql  0003_slim_lockheed.sql  0004_natural_kitty_pryde.sql  0008_invite_system.sql  0010_invalidate_narration_for_image_fix.sql  0011_flat_mercury.sql  0011_whole_talon.sql  0012_email_subscriptions.sql  0012_schema_changes.sql  0012_wild_proudstar.sql  0013_data_migration.sql  0014_job_queue_refactor.sql  0015_entry_last_seen_at.sql  0018_full_content.sql  0019_add_feed_body_hash.sql  0020_feed_last_entries_updated.sql  0024_add_web_feed_type.sql  0025_migrate_to_web_type.sql  0029_subscription_previous_feeds.sql  0030_api_tokens.sql  0033_ingest_address_token_citext.sql  0034_users_email_citext.sql  0035_add_feed_fetch_version.sql  0035_subscription_views.sql  0036_full_content_fetching.sql  0038_entry_summaries.sql  0040_entry_state_idempotency.sql  0042_entry_scores.sql  0042_lesswrong_api_feed_type.sql  0043_backfill_has_starred.sql  0043_lesswrong_constraint.sql  0047_visible_entries_state_updated_at.sql  0052_visible_entries_read_changed_at.sql  0055_nullable_read_changed_at.sql  0056_feed_fetch_stats.sql  0058_wallabag_id.sql  CLAUDE.md  schema.sql
extension/: README.md  build.sh  manifest.json
migrations/: 0002_nappy_black_queen.sql  0005_many_tenebrous.sql  0006_easy_blindfold.sql  0007_user_entries_visibility.sql  0008_invite_system.sql  0009_paragraph_map.sql  0011_add_feed_type_enums.sql  0016_opml_imports.sql  (+79 more)
native/feed-parser/: Cargo.toml  build.mjs  index.d.ts  index.js  package.json
native/feed-parser/bench/: README.md  bench.mjs  stress-gc.mjs
native/feed-parser/core/: Cargo.toml
native/feed-parser/core/src/: atom.rs  lib.rs  opml.rs  rss.rs  types.rs  xml.rs
native/feed-parser/src/: external_string.rs  lib.rs
native/readability/: Cargo.toml  build.mjs  index.d.ts  index.js  package.json
native/readability/src/: lib.rs
native/sanitizer/: Cargo.toml  build.mjs  index.d.ts  index.js  package.json
native/sanitizer/core/: Cargo.toml
native/sanitizer/core/src/: embeds.rs  lib.rs  mathjax.rs  sanitize.rs  scanner.rs  serialize.rs  svg.rs  urls.rs
native/sanitizer/src/: lib.rs
(+1833 files in other folders)
